@@ -1,5 +1,4 @@
 # -*- coding: UTF-8 -*-
-from __future__ import annotations
 
 """
 win32timezone:
@@ -33,7 +32,7 @@ True
 (note that the result of utcoffset call will be different based on when now was
 generated, unless standard time is always used)
 
->>> now = datetime.datetime.now(TimeZoneInfo('Mountain Standard Time', True))
+>>> now = datetime.datetime.now(win32timezone.TimeZoneInfo('Mountain Standard Time', True))
 >>> now.utcoffset()
 datetime.timedelta(days=-1, seconds=61200)
 
@@ -77,8 +76,13 @@ True
 
 It's possible to construct a TimeZoneInfo from a TimeZoneDescription
 including the currently-defined zone.
->>> tz = win32timezone.TimeZoneInfo(TimeZoneDefinition.current())
+>>> code, info = win32timezone.TimeZoneDefinition.current()
+>>> tz = win32timezone.TimeZoneInfo(info, not code)
 >>> tz == pickle.loads(pickle.dumps(tz))
+True
+
+Although it's easier to use TimeZoneInfo.local() to get the local info
+>>> tz == TimeZoneInfo.local()
 True
 
 >>> aest = win32timezone.TimeZoneInfo('AUS Eastern Standard Time')
@@ -232,6 +236,8 @@ Test offsets that occur right at the DST changeover
 datetime.datetime(2011, 11, 6, 1, 0, tzinfo=TimeZoneInfo('Pacific Standard Time'))
 
 """
+
+from __future__ import annotations
 
 import datetime
 import logging
@@ -504,18 +510,40 @@ class TimeZoneInfo(datetime.tzinfo):
     >>> offsets = set(tzi.utcoffset(year) for year in subsequent_years)
     >>> len(offsets)
     1
+
+    Cannot create a `TimeZoneInfo` with an invalid name.
+    >>> TimeZoneInfo('Does not exist')
+    Traceback (most recent call last):
+    ...
+    ValueError: Timezone Name 'Does not exist' not found
+    >>> TimeZoneInfo(None)
+    Traceback (most recent call last):
+    ...
+    ValueError: subkey name cannot be empty
+    >>> TimeZoneInfo("")
+    Traceback (most recent call last):
+    ...
+    ValueError: subkey name cannot be empty
     """
 
     # this key works for WinNT+, but not for the Win95 line.
     tzRegKey = r"SOFTWARE\Microsoft\Windows NT\CurrentVersion\Time Zones"
 
-    def __init__(self, param=None, fix_standard_time=False):
+    def __init__(
+        self,
+        param: str | TimeZoneDefinition,
+        fix_standard_time: bool = False,
+    ) -> None:
         if isinstance(param, TimeZoneDefinition):
             self._LoadFromTZI(param)
-        if isinstance(param, str):
+        else:
             self.timeZoneName = param
             self._LoadInfoFromKey()
         self.fixedStandardTime = fix_standard_time
+
+    # For tzinfo pickle support
+    def __getinitargs__(self) -> tuple[TimeZoneDefinition, bool]:
+        return (self.staticInfo, self.fixedStandardTime)
 
     def _FindTimeZoneKey(self):
         """Find the registry key for the time zone name (self.timeZoneName)."""
@@ -528,8 +556,9 @@ class TimeZoneInfo(datetime.tzinfo):
         key = _RegKeyDict.open(winreg.HKEY_LOCAL_MACHINE, self.tzRegKey)
         try:
             result = key.subkey(timeZoneName)
-        except Exception:
-            raise ValueError("Timezone Name %s not found." % timeZoneName)
+        except FileNotFoundError:
+            # Don't catch ValueError, keep the original error message
+            raise ValueError(f"Timezone Name {timeZoneName!r} not found")
         return result
 
     def _LoadInfoFromKey(self):
@@ -821,6 +850,8 @@ class _RegKeyDict(Dict[str, int]):
         return _RegKeyDict(winreg.OpenKeyEx(*args, **kargs))
 
     def subkey(self, name):
+        if not name:
+            raise ValueError("subkey name cannot be empty")
         return _RegKeyDict(winreg.OpenKeyEx(self.key, name))
 
     def __load_values(self):
